--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <div class="col-lg-6" id="choice1">
                 <div class="text-center">
                     <h1><a class="link" href="contact.html">Scenice Rides </a></h1>
-                    <img class="img-fluid" src="assets/imgs/IMG_3.JPG" alt="Hot air balloon">
+                    <img class="img-fluid" src="assets/imgs/scenic.jpg" alt="Hot air balloon">
                 </div>
             </div>
             <div class="col-lg-6" id="choice1">
                 <div class="text-center">
                     <h1><a class="link" href="stunts.html">Stunts </a></h1>
-                    <img class="img-fluid" src="assets/imgs/IMG_2.JPG" alt="Hot air balloon">
+                    <img class="img-fluid" src="assets/imgs/stunts.jpg" alt="Hot air balloon">
                 </div>
             </div>
         </div>
