--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <style>
         body {
             position: relative;
+            font-family: 'Special Elite', cursive;
+
         }
 
         h4 {
@@ -66,7 +70,7 @@
             height: 500px;
             color: #fff;
             background-size: cover;
-            background-image: url("assets/imgs/rides.jpg");
+            background-image: url("assets/imgs/IMG_jsmith.JPG");
             background-position: center;
         }
 
@@ -147,6 +151,7 @@
                         <li><a href="#section2">Contact</a></li>
                         <li><a href="#section4">Pricing</a></li>
                         <li><a href="#section5">FAQ's</a></li>
+                        <li><a href="photos.html">Photo Creds</a></li>
                     </ul>
                 </div>
             </div>
@@ -197,7 +202,7 @@
                     morning. In the event that the wind does pick up we’ll do a standard high wind landing, during which
                     the basket will drag a bit before stoping and it might tilt. We’ll brief you how to handle a high wind
                     landing and the basket tilting over. It is not dangerous, as long as you follow the safety instructions,
-                    and you’ll probably just end up have a big laugh. High wind landings do not hapen often.
+                    and you’ll probably just end up have a big laugh. High wind landings do not happen often.
                 </h4>
                 <br />
                 <h2>How many people will the basket fit?</h2>
@@ -260,7 +265,7 @@
             <footer class="footer">
                 <div class="two-toned-footer-color">
                     <p class="text-muted text-muted-footer text-center">
-                        &copy; Website Design by AGL Addiction
+                        &copy; Website Design by AGL Addiction LLC
                     </p>
                 </div>
             </footer>
