--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>DropLyne</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 
 </head>
 
@@ -18,7 +20,7 @@
         <div class="row" id="home">
             <div class="col-lg-6" id="choice1">
                 <div class="text-center">
-                    <h1><a class="link" href="contact.html">Scenice Rides </a></h1>
+                    <h1><a class="link" href="contact.html">Scenic Flights</a></h1>
                     <img class="img-fluid" src="assets/imgs/scenic.jpg" alt="Hot air balloon">
                 </div>
             </div>
@@ -33,7 +35,7 @@
         <footer class="footer">
             <div class="two-toned-footer-color"></div>
             <p class="text-muted text-muted-footer text-center">
-                &copy; Website Design by AGL Addiction
+                &copy; Website Design by AGL Addiction LLC
             </p>
         </footer>
 
