--- a/stunts.html
+++ b/stunts.html
@@ -6,12 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
 
     <style>
         body {
             position: relative;
+            font-family: 'Special Elite', cursive;
+
         }
 
         h4 {
@@ -103,7 +107,7 @@
     </style>
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<body data-spy="scroll" data-target=".navbar" data-offset="10">
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
@@ -116,14 +120,15 @@
                 <a class="navbar-brand" href="index.html">Droplyne</a>
             </div>
             <div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
+                <nav class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav" id="myNavbar">
                         <li><a href="#section3">Top</a></li>
                         <li><a href="#section7">Contact</a></li>
                         <li><a href="#section4">Pricing</a></li>
                         <li><a href="#section2">FAQ's</a></li>
+                        <li><a href="photos.html">Photo Creds</a></li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </div>
     </nav>
@@ -185,8 +190,8 @@
                 </h4>
                 <br />
                 <h2>Can we go higher than 10k?</h2>
-                <h4>Sure we can. What makes aircraft fly more so that physics..... is money. You got that and you can go
-                    to the moon mates.
+                <h4>Sure we can. What makes aircraft fly more so than physics..... is money. You got money and you can go
+                    to the moon maties.
                 </h4>
             </div>
         </div>
@@ -206,8 +211,12 @@
                 <br>
                 <h2>Why does it cost so much?</h2>
                 <h4>Balloons are considered aircraft and must undergo the same aircraft specific servicing and regulations
-                    as any other aircraft and can only be worked on by an aircraft mechanic or balloon repair station. Add
-                    repairs and maintaineance to the price of fuel and ground crew..it is a costly operation.
+                    as any other aircraft and can only be worked on by an aircraft mechanic or balloon repair station. Balloons
+                    deteriorate. The fabric being exposed to 250degrees Fahrenheit, direct sunlight and Arizona desert sand
+                    will only last 350 to 500 hours. Therefor they have to be replaced more often than the plane you jump
+                    out off.</h4>
+                <br>
+                <h4>Add repairs and maintaineance to the price of fuel and ground crew..it is a costly operation.
                 </h4>
             </div>
         </div>
@@ -238,12 +247,20 @@
             <footer class="footer">
                 <div class="two-toned-footer-color">
                     <p class="text-muted text-muted-footer text-center">
-                        &copy; Website Design by AGL Addiction
+                        &copy; Website Design by AGL Addiction LLC
                     </p>
                 </div>
             </footer>
         </div>
     </main>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
