--- a/stunts.html
+++ b/stunts.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <style>
         body {
             position: relative;
             font-family: 'Special Elite', cursive;
-
         }
 
         h4 {
@@ -107,7 +106,7 @@
     </style>
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="10">
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
@@ -120,15 +119,14 @@
                 <a class="navbar-brand" href="index.html">Droplyne</a>
             </div>
             <div>
-                <nav class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav" id="myNavbar">
-                        <li><a href="#section3">Top</a></li>
-                        <li><a href="#section7">Contact</a></li>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#section2">Contact</a></li>
                         <li><a href="#section4">Pricing</a></li>
-                        <li><a href="#section2">FAQ's</a></li>
+                        <li><a href="#section5">FAQ's</a></li>
                         <li><a href="photos.html">Photo Creds</a></li>
                     </ul>
-                </nav>
+                </div>
             </div>
         </div>
     </nav>
@@ -253,14 +251,6 @@
             </footer>
         </div>
     </main>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
-
 </body>
 
 </html>
